2007-07-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController): Prevent passord to write in log.(issue #59)

2007-07-17  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/admin/article_controller.rb (Admin::form_article): Small fix. (issue #57)

	* donrails/app/apis/meta_weblog_service.rb (MetaWeblogService::editPost): Fix to apply has_many :through.
	(MetaWeblogService::newPost): likewise.
	* donrails/app/apis/blogger_service.rb (BloggerService::newPost): likewise.

2007-07-14  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/don_ping_test.rb: Add to use Hpricot not to depend Htree.
	* donrails/lib/modules/moinmoin.rb (DonRails::Moinmoin::body_to_xml): likewise.
	* donrails/lib/modules/html.rb (DonRails::HTML::body_to_xml): likewise.
	* donrails/lib/modules/rd.rb (DonRails::RD::body_to_xml): likewise.
	* donrails/lib/modules/wiliki.rb (DonRails::Wiliki::body_to_xml): likewise.
	* donrails/lib/modules/hnf.rb (DonRails::HNF::body_to_xml): likewise.

2007-07-13  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/rdf_helper.rb (RdfHelper::{rdf,rss2}_parts*): New method to share for rdf and rss.
	* donrails/app/views/rdf/*.rxml: Change to use these.

2007-07-12  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::update_attachment_attributes): Remove push_with_attributes. 

	* donrails/app/controllers/admin/article_controller.rb: Cleanup.

	* donrails/app/apis/movable_type_service.rb (MovableTypeService::setPostCategories): Remove push_with_attributes. 

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::bind_article_category): Remove push_with_attributes.

	* donrails/app/views/rdf/rdf_enrollment.rxml: likewise.

	* donrails/app/views/rdf/rdf_category.rxml: likewise.

	* donrails/app/views/rdf/rdf_search.rxml: likewise.

	* donrails/app/views/rdf/rdf_article.rxml: likewise.
